made a temperment algorithm and then made an algorithm for outcomes of the quiz in user.js

--- a/public/assets/js/test.html
+++ b/public/assets/js/test.html
@@ -11,6 +11,7 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
-    <script type="text/javascript" src="user.js"></script>
+    <!-- <script type="text/javascript" src="temperament.js"></script> -->
+    <script type="text/javascript" src="user.js"></script> 
 </body>
 </html>
